// Copyright Â© 2017-2018 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/stratumn/alice/grpc/ext/ext.proto";

package stratumn.alice.pb.bootstrap;

option go_package = "github.com/stratumn/alice/pb/bootstrap;bootstrap";

// A simple Hello handshake message.
message Hello {}

// A message ack.
message Ack {
    string error = 1;
}

// A results filter.
message Filter {}

// A base58-encoded PeerId.
message PeerID {
    bytes peer_id = 1 [
        (stratumn.alice.grpc.ext.field_desc) = "Peer ID",
        (stratumn.alice.grpc.ext.field_required) = true,
        (stratumn.alice.grpc.ext.field_base58) = true
    ];
}

// A message containing a proof of a node's identity.
message NodeIdentity {
    bytes peer_id = 1 [
        (stratumn.alice.grpc.ext.field_desc) = "Peer ID",
        (stratumn.alice.grpc.ext.field_required) = true,
        (stratumn.alice.grpc.ext.field_base58) = true
    ];
    bytes peer_addr = 2 [
        (stratumn.alice.grpc.ext.field_desc) = "Peer Address"
    ];
    bytes identity_proof = 3 [
        (stratumn.alice.grpc.ext.field_desc) = "KYC data (TBD)"
    ];
}

// Type of network updates that can be proposed.
enum UpdateType {
    None = 0;
    AddNode = 1;
    RemoveNode = 2;
}

// Proposal to update the network.
message UpdateProposal {
    UpdateType update_type = 1;
    NodeIdentity node_details = 2;
}